fixed layout issues

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -12,6 +12,7 @@
     background: linear-gradient(to right, #141e30, #243b55); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
     font-size: 1.15rem;
+    padding-bottom: 6rem;
     border: none;   
 }
 
@@ -35,7 +36,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .portfolio__item {
@@ -48,6 +49,7 @@
     background-color: #fff;
     border: none;
     border-radius: 10px;
+    margin-bottom: 1.875rem;
 }
 
 
@@ -91,7 +93,7 @@
 
 @media only screen and (min-width: 900px) {
     .portfolio {
-        width: 100vw;   
+        width: 100vw;
     }
 
     .portfolio__item-title {
@@ -107,20 +109,24 @@
         color: #fff;
         width: 70%;
     }
-    
 
     .portfolio__item {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
         background: none !important;
         margin-top: 0;
-        width: 90%;
+        width: 100%;
         margin-bottom: 1.875rem;
-        
+        flex-wrap: nowrap;
+        align-content: center;
     }
 
     .portfolio__img {
         width: 50%;
-        height: 250px;
-        max-height: 300px;
+        height: 400px;
+        max-height: 500px;
         border-radius: 10px;
         object-position: center;
         object-fit: cover;
@@ -129,6 +135,7 @@
     }
 
     .portfolio__container {
+        width: 100%;
         margin-bottom: 10rem;
         margin-top: 2rem;
         margin-inline: auto;
